--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ anyhow = "1.0.95"
 clap-v3 = "3.0.0-beta.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+rayon = "1.10.0"
+
+[profile.release]
+strip = true # strip
